[gd_scene load_steps=7 format=3 uid="uid://b1b8up1icmvhq"]

[ext_resource type="Script" uid="uid://dtesoexkl0ph" path="res://ui/play_button_body.gd" id="1_85xi2"]
[ext_resource type="Texture2D" uid="uid://b3of8ir2kt51r" path="res://assets/play-button.png" id="1_wxmwh"]
[ext_resource type="PackedScene" uid="uid://cwca3nqjljvq5" path="res://components/ball_highlight.tscn" id="2_85xi2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_85xi2"]
radius = 101.07918

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_85xi2"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 45.86
inherit_velocity_ratio = 0.13
spread = 180.0
initial_velocity_min = 83.229996
initial_velocity_max = 184.19
gravity = Vector3(0, 200, 0)
scale_min = 0.0
scale_max = 15.179999
color = Color(0.78039217, 0.8117647, 0.8, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_85xi2"]
texture = ExtResource("1_wxmwh")

[node name="PlayButtonBody" type="CharacterBody2D"]
script = ExtResource("1_85xi2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(98, 98)
shape = SubResource("CircleShape2D_85xi2")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(98, 98)
emitting = false
amount = 64
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_85xi2")

[node name="PlayButton" type="Button" parent="."]
custom_minimum_size = Vector2(196, 196)
offset_right = 196.0
offset_bottom = 196.0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_85xi2")
theme_override_styles/pressed = SubResource("StyleBoxTexture_85xi2")
theme_override_styles/hover = SubResource("StyleBoxTexture_85xi2")
theme_override_styles/disabled = SubResource("StyleBoxTexture_85xi2")
theme_override_styles/focus = SubResource("StyleBoxTexture_85xi2")

[node name="BallHighlight" parent="PlayButton" instance=ExtResource("2_85xi2")]
position = Vector2(98, 98)
min_radius = 98.0
max_radius = 196.0
color = Color(0.78039217, 0.8117647, 0.8, 1)
thickness = 12.0

[connection signal="finished" from="GPUParticles2D" to="." method="_on_gpu_particles_2d_finished"]
[connection signal="pressed" from="PlayButton" to="." method="_on_pressed"]
